force-app/main/default/objects/Opportunity/fields/MEDDICC_Champion_Notes__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Champion_Notes__c</fullName>
    <label>MEDDICC Champion Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Qualitative notes capturing the rep's understanding of Champion for this opportunity.</description>
</CustomField>