force-app/main/default/objects/Opportunity/fields/MEDDICC_Competition_Notes__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Competition_Notes__c</fullName>
    <label>MEDDICC Competition Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Qualitative notes capturing the rep's understanding of Competition for this opportunity.</description>
</CustomField>