force-app/main/default/objects/Opportunity/fields/MEDDICC_Decision_Criteria_Notes__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Decision_Criteria_Notes__c</fullName>
    <label>MEDDICC Decision Criteria Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Qualitative notes capturing the rep's understanding of Decision Criteria for this opportunity.</description>
</CustomField>