force-app/main/default/objects/Opportunity/fields/MEDDICC_Economic_Buyer_Notes__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Economic_Buyer_Notes__c</fullName>
    <label>MEDDICC Economic Buyer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Qualitative notes capturing the rep's understanding of Economic Buyer for this opportunity.</description>
</CustomField>