force-app/main/default/objects/Opportunity/fields/MEDDICC_Identified_Pain_Notes__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Identified_Pain_Notes__c</fullName>
    <label>MEDDICC Identified Pain Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Qualitative notes capturing the rep's understanding of Identified Pain for this opportunity.</description>
</CustomField>