force-app/main/default/objects/Opportunity/fields/MEDDICC_Metrics_Notes__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Metrics_Notes__c</fullName>
    <label>MEDDICC Metrics Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Qualitative notes capturing the rep's understanding of Metrics for this opportunity.</description>
</CustomField>