force-app/main/default/objects/Opportunity/fields/MEDDICC_Metrics_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDICC_Metrics_Score__c</fullName>
    <label>MEDDICC Metrics Score</label>
    <type>Picklist</type>
    <description>Manager or rep confidence rating for Metrics. 1 = Not identified, 5 = Fully confirmed.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Not identified</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Partially understood</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Understood</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Confirmed</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Fully confirmed and documented</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>